--- a/package.json
+++ b/package.json
@@ -18,22 +18,24 @@
     "@nuxtjs/axios": "^5.12.2",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
+    "install": "^0.13.0",
     "node-sass": "^4.14.1",
-    "nuxt": "^2.14.5",
+    "npm": "^6.14.8",
+    "nuxt": "^2.14.7",
     "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.3"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
-    "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/tailwindcss": "^3.0.2",
+    "@nuxtjs/eslint-module": "^3.0.0",
+    "@nuxtjs/tailwindcss": "^3.1.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.1"
+    "prettier": "^2.1.2"
   }
 }
